script para ajustar el menu

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -96,6 +96,6 @@
 		{% include "fragments/messages_parse.js" %}
 		/* Update data */
 	    fillComments(null);
-
+	    {% include "fragments/right_menu.js" %}
 	</script>
 {%- endblock %}
