Fix root directory path for scripts and css

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 
 {% block head_extra %}
-    <link type="text/css" rel="stylesheet" href="{{ url.data }}css/jquery.qtip.min.css">
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}/css/jquery.qtip.min.css">
     <style type="text/css">
         {% include "home/styles.css" %}
         {% include "fragments/tinycarousel.css" %}
@@ -67,10 +67,10 @@
 
 {% block scripts_extra -%}
 	<!-- JQuery Carousel and qTip -->
-	<script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
-	<script type="text/javascript" src="{{ url.data }}js/jquery.qtip.min.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/js/jquery.tinycarousel.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/js/jquery.qtip.min.js"></script>
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}js/jfather.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/js/jfather.js"></script>
 
 	<script type="text/javascript">
 	    {% include "fragments/comments.js" %}
@@ -80,8 +80,8 @@
 	</script>
 
 	<!-- Data Scripts -->
-	<script type="text/javascript" src="{{ url.data }}home-comments.js"></script>
-	<script type="text/javascript" src="{{ url.data }}home-showcase.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/home-comments.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/home-showcase.js"></script>
 
 	<script type="text/javascript">
 
