--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -1,5 +1,5 @@
 <!-- Common Scripts -->
-<script type="text/javascript" src="{{ url.data }}js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="{{ url.data }}/js/jquery-1.4.2.min.js"></script>
 
 <!-- Site scripts -->
 <script type="text/javascript" src="{{ url.gen_script }}/app.js"></script>
