--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -40,13 +40,13 @@
         </ul>
         <input id="txtBuscar" name="buscadorTxtField" type="text" value=""
             class="hBuscTxtF"
-            onkeypress="javascript: if(APP.pressedEnter(event)) APP.setSearch(document.getElementById('optBusqueda').innerHTML, document.getElementById('txtBuscar').value, '0','0',document.getElementById('seccionBusqueda').value);">
+            onkeypress="javascript: if(APP.pressedEnter(event)) APP.setSearch(document.getElementById('optBusqueda').innerHTML, document.getElementById('txtBuscar').value,document.getElementById('idSeccion').value,document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">
         <input type="hidden" id="seccionBusqueda"
                 value="En Tematika.com">
         <input type="hidden" id="idSeccionPropia" value="0">
         <input type="hidden" id="idSeccion" value="0">
         <a id="btnBuscar" class="hBuscButton" title="Buscar"
-            href="javascript:APP.setSearch(document.getElementById('optBusqueda').innerHTML,document.getElementById('txtBuscar').value,'',document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">&nbsp;</a>
+            href="javascript:APP.setSearch(document.getElementById('optBusqueda').innerHTML,document.getElementById('txtBuscar').value,document.getElementById('idSeccion').value,document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">&nbsp;</a>
     </div>
 {%- endblock -%}
 
