--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -51,7 +51,9 @@
 {% block canvas_content -%}
 <div class="barraCentral" id="barraCentral">
     <div id="seccionTematika">
-        <div id="tree"> {{ tree }} </div> {#- XXX MISSING -#}
+        <div id="tree">
+            {% include "fragments/tree.html" %}
+        </div>
         <div id="showcase">
             {# include "subject/showcase.html" #}
         </div>
