Add new showcase for section, needs work

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -55,7 +55,7 @@
             {% include "fragments/tree.html" %}
         </div>
         <div id="showcase">
-            {# include "subject/showcase.html" #}
+            {% include "subject/showcase.html" %}
         </div>
         <div id="related"> {{ related }} </div>
         <div id="comments"> {{ comments }} </div>
