--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -61,7 +61,7 @@
 										href="#"><object>
 											<div id="anterior1DIV" class="mesaAnterior"></div>
 										</object>
-								</a><div id="slider{{ key }}">{{ renderS.renderSlider(slider_home_books, key)|replace("\n", "") }}</div>
+								</a><div id="slider{{ key }}">{{ renderS.renderSlider(d['Showcase'], d['Title'], 6, url) }}</div>
 									 <a class="buttons next" id="siguiente1" onfocus="this.blur()" href="#"><object>
 											<div id="siguiente1DIV" class="mesaSiguiente"></div>
 										</object>
