--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -1,7 +1,6 @@
 {% extends "page.html" %}
 
 {#- Pick useful data -#}
-{#- Ugly hack, showcase will die so no need to waste time on this -#}
 {%- set section_name = { 'Libros': 'books', 'Musica': 'music', 'Peliculas': 'moves', 'Juegos': 'games' }[d['Title']] -%}
 
 {% block head_extra %}
@@ -91,7 +90,7 @@
 	<script type="text/javascript">
 
 		jQuery(document).ready(function() {
-			$('#sliderSection{{ section_name }}').tinycarousel({ axis: 'y', display: 1} );
+			$('#sliderSection').tinycarousel({ axis: 'y', display: 1} );
 			renderLastVisited('lastvisited');
 		});
 		/* parse messages */
