--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -8,33 +8,12 @@
 		onmouseout="javascript:mostrarDiv('tmtkMesaSeccionesTitLibros');"><object>
 			<div id="tmtkMesaSeccionesTitLibros" style="display: none;"></div>
 		</object>
-	</a> 
+	</a>
 	<div class="tmtkMesa-back">
 		<div class="tmtkMesaMenuMod">
 			<div class="tmtkMesaMenuTit"></div>
-			<ul class="dropdown">
-				<li class="diri"><span
-					onclick="javascript:desplegarOpciones('orden');"
-					id="mostrarRanking">Te Recomendamos</span>
-					<ul id="orden" onmouseover="clearTimeout(tempo);"
-						onmouseout="ocultarOpcionesT('orden');">
-						<li><a href="javascript:mostrarBuscarPor('TMK_RDA','mostrarRanking','orden');fillShowCase('TMK_RDA', null ,null);" id="TMK_RDA">Te Recomendamos</a></li>
-						<li><a href="javascript:mostrarBuscarPor('MV','mostrarRanking','orden');fillShowCase('MV', null ,null);" id="MV">M&aacute;s Vendidos</a></li>
-						<li><a href="javascript:mostrarBuscarPor('MP','mostrarRanking','orden');fillShowCase('MP', null ,null);" id="MP">M&aacute;s Populares</a></li>
-						<li><a href="javascript:mostrarBuscarPor('MVA','mostrarRanking','orden');fillShowCase('MVA', null ,null);" id="MVA">M&aacute;s Valorados</a></li>
-					</ul></li>
-			</ul>
-			<ul class="dropdown">
-				<li class="diri"><span
-					onclick="javascript:desplegarOpciones('filtro');"
-					id="mostrarTiempo">Todos</span>
-					<ul id="filtro" onmouseover="clearTimeout(tempo);"
-						onmouseout="ocultarOpcionesT('filtro')">
-						<li><a href="javascript:mostrarBuscarPor('M','mostrarTiempo','filtro');fillShowCase(null, 'M' ,null);" id="M">&Uacute;ltimos tres meses</a></li>
-						<li><a href="javascript:mostrarBuscarPor('Y','mostrarTiempo','filtro');fillShowCase(null, 'Y' ,null);" id="Y">&Uacute;ltimo a&ntilde;o</a></li>
-						<li><a href="javascript:mostrarBuscarPor('T','mostrarTiempo','filtro');fillShowCase(null, 'T' ,null);" id="T">Todos</a></li>
-					</ul></li>
-			</ul>
+            <button onclick="javascript:fillShowCase('Recommended', null)">Recomendados</button>
+            <button onclick="javascript:fillShowCase('Showcase',null)">Bestsellers</button>
 		</div>
 		<div class="tmtkMesa">
 			<table border="0" cellpadding="0" cellspacing="0">
