--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -9,6 +9,19 @@
 		Editorial
 	{%- endif -%}
 {%- endmacro %}
+{%- macro getSection(id) -%}
+	{%- if id == 1 -%}
+		libros
+	{%- elif id == 4-%}
+		musica
+	{%- elif id == 5 -%}
+		peliculas
+	{%- elif id == 3 -%}
+		pasatiempos
+	{%- else -%}
+		libros
+	{%- endif -%}
+{%- endmacro %}
 <!-- **** SECCION TEMATIKA **** -->
 <div id="divCarrito" class="efectoCarritoMod" style="display:none">
 	<div class="efectoCarritoTxt"><span class="txtMsgCarritoOK" id="msgCarritoOK"></span><br /><div id="msgCarritoERROR" style="font-size:12;color:red"></div><span id="spnPrecioCarrito" class="txtPrecioCarrito">PRECIO: $ <span  class="txtPrecioCarrito" id="precioCarrito"></span>.-</span></div>
@@ -32,7 +45,7 @@
 	<tr id="trPedir"><td colspan="2"><input id="btnPedir" type="button"  value="Pedido Especial"></td></tr>
 </table></div>
 <!-- <tmpl_var contenidoSEO> -->
-<a href="/{{ linkSection }}" class="panelSeccAct"></a>
+<a href="/{{ getSection(d.Categoria_Seccion) }}" class="panelSeccAct"></a>
 <div class="detalleInfoPrinc">
    	<div id="dTopLeft">
         <div class="dImagenes"><div class="detalleImagen"><img src="{{ d.CoverSmall}}" alt="{{ d.Title }}" title="{{ d.Title }}"></div></div>
@@ -45,16 +58,22 @@
             {%- if d.Identifiers -%}
             <span>I.S.B.N : {{ d.Identifiers[0].IDValue }}</span>
             {%- endif %}
-            <span>*Clasificaci&oacute;n: {%- for clasificacion in detail_main_data.clasificaciones -%}<a href="{{ clasificacion.urlGenero }}">{{ clasificacion.genero }}</a>&nbsp;{%- endfor %}</span>
+            <span>Clasificaci&oacute;n: {%- for categorie in d.Categories -%}<a href="{{ categorie.URL }}">{{ categorie.Text }}</a>&nbsp;{%- if not loop.last -%}È&nbsp;{%- endif %} {%- endfor %}</span>
             {%- if d.ProductForm -%}<span>Formato: {{ d.ProductForm_desc }}</span>{%- endif %}
             <span>Disponibilidad: {{ d.ProductAvailability_desc }}</span>
-            {%- if detail_main_data.paginas -%}<span>*Paginas:{{ detail_main_data.paginas }} {{ detail_main_data.duracion }}</span>{%- endif %}
+            {%- if d.ExtentUnit -%}<span>{{ d.ExtentUnit_desc }}:{{ d.ExtentValue }}</span>{%- endif %}
             <span>Publicaci&oacute;n: {{ d.PublishingDateValue }} | Idioma: {{ d.LanguageCode }}</span>
             <div class="dInfoM">{%- if detail_main_data.primerCapitulo -%}<a href="#primerCap">[+] Primer capitulo</a>&nbsp;{%- endif %}{%- if detail_main_data.indice -%}<a href="#indCont">[+] Indice de contenidos</a>&nbsp;{%- endif %}{%- if detail_main_data.biografia -%}<a href="#biogra">[+] Biografia</a>&nbsp;{%- endif %}{%- if detail_main_data.entrevista -%}<a href="#entrevista">[+] Ver Entrevista</a>&nbsp;{%- endif %}</div>
             {%- if d.CoverLarge %}<a href="javascript:mostrarImagen('{{ d.CoverLarge }}')">Ampliar imagen</a>{%- endif %}
 			<div id="divEvaluacion"><div id="divEvaluacion"><div class="dInfoCalif"><div class="dInfoCalifStarMod"><span>Calificaci&oacute;n de lectores:</span>
 			{%- if d.Rating -%}
-				{%- for number in range(0, d.Rating|int) -%}<div class="dInfoCalifStar"></div> {%- endfor %}
+				{%- for number in range(0, 4) -%}
+				   	{%- if number+1 <= d.Rating|int -%}
+				   		<div class="dInfoCalifStar"></div>
+				   	{%- else -%}
+				   		<div class="dInfoCalifStarDes"></div>
+				   	{%- endif %}
+				{%- endfor %}
 			{%- else -%}
 				<label><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion=">SŽ el primero en comentarlo!</a></label>
 			{%- endif %}
