Fix comment variable name typo

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -84,9 +84,9 @@
 
 	<!-- Data Scripts -->
 	<script type="text/javascript"
-            src="{{ url.data }}/{{ subject_name }}/comments.js"></script>
+            src="{{ url.data }}/{{ section_name }}/comments.js"></script>
 	<script type="text/javascript"
-            src="{{ url.data }}/{{ subject_name }}/showcase.js"></script>
+            src="{{ url.data }}/{{ section_name }}/showcase.js"></script>
 
 	<script type="text/javascript">
 
