Fix comment data naming and fetching

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -97,7 +97,7 @@
 		/* parse messages */
 		{% include "fragments/messages_parse.js" %}
 		/* Update data */
-	    fillComments(null);
+	    fillComments('{{ section_name }}');
 	    {% include "fragments/right_menu.js" %}
 	</script>
 {%- endblock %}
