--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -29,6 +29,13 @@
 		{%- endif %}
 	{%- endfor %}
 {%- endmacro %}
+{%- macro getAvailability(code) -%}
+	{%- if code == '21' -%}
+		true
+	{%- else -%}
+		false
+	{%- endif %}
+{%- endmacro %}
 <!-- **** SECCION TEMATIKA **** -->
 <div id="divCarrito" class="efectoCarritoMod" style="display:none">
 	<div class="efectoCarritoTxt"><span class="txtMsgCarritoOK" id="msgCarritoOK"></span><br /><div id="msgCarritoERROR" style="font-size:12;color:red"></div><span id="spnPrecioCarrito" class="txtPrecioCarrito">PRECIO: $ <span  class="txtPrecioCarrito" id="precioCarrito"></span>.-</span></div>
@@ -91,7 +98,7 @@
     <div id="dInfoCompl">
     	<div class="dSolapas" id="datosCompl">
 			<div class="tmtkMesaMenuMod"><img class="solapasTitDatosPrinc" title="Datos principales"  alt="<tmpl_var altDatosPrincipales>" src="/imagenes/rediseno/imagenes/comun/t-datosPrinc.gif" /></div>
-			<div class="dResena">{%- if getOnixItem(d.Texts, '17') -%}<span>Solapa:</span>{{ getOnixItem(d.Texts, '17') }}{%- endif %}{%- if getOnixItem(d.Texts, '18') -%}<span>Contratapa:</span>{{ getOnixItem(d.Texts, '18') }}{%- endif %}{%- if getOnixItem(d.Texts, '02') -%}<span>Sinopsis:</span>{{ getOnixItem(d.Texts, '02') }}{%- endif %}</div>
+			<div class="dResena">{%- if getOnixItem(d.Texts, '17') -%}<span>Solapa:</span>{{ getOnixItem(d.Texts, '17') }}{%- endif %}{%- if getOnixItem(d.Texts, '18') -%}<span>Contratapa:</span>{{ getOnixItem(d.Texts, '18') }}{%- endif %}{%- if getOnixItem(d.Texts, '01') -%}<span>Sinopsis:</span>{{ getOnixItem(d.Texts, '01') }}{%- endif %}</div>
         </div>
 		{%- if getOnixItem(d.Texts, '04') -%}
 			<div class="dSolapas" id="indCont">
@@ -105,10 +112,21 @@
 				<div class="dResena" id="divPrimerCapitulo" style="border:thin solid;border-color: white;">{{ getOnixItem(d.Texts, '24') }}</div>
 			</div>
 		{%- endif %}
-		{%- if getOnixItem(d.Texts, '13') -%}
+		{%- if getOnixItem(d.Texts, '13') or (d.Authors and getOnixItem(d.Authors[0].Texts, '13'))-%}
 			<div class="dSolapas" id="biogra">
 				<div class="tmtkMesaMenuMod"><div class="solapasTitBio" title="&Iacute;ndice de contenidos" /></div></div>
-	        	<div class="dResena" id="divBiografia"><span></span>{{ getOnixItem(d.Texts, '13') }}</div>
+	        	<div class="dResena" id="divBiografia"><span></span>
+	        	{%- if getOnixItem(d.Texts, '13') -%}
+	        		{{ getOnixItem(d.Texts, '13') }}
+	        		<br>
+	        	{%- endif %}
+	        	{%- if d.Authors -%}
+	        		{%- for author in d.Authors -%}
+	        			{{ getOnixItem(author.Texts, '13') }}
+	        			<br>
+	        		{%- endfor %}
+	        	{%- endif %}
+	        	</div>
 			</div>
 		{%- endif %}
 		<a name="coment"></a><div class="dSolapas" id="comentarios"><div class="tmtkMesaMenuMod"><img class="solapasTitComent" alt="<tmp_var altComentarios>" src="/imagenes/rediseno/imagenes/comun/t-comentarios.gif" /></div></div>
@@ -128,10 +146,10 @@
 </div>
 <!-- <tmpl_var contenidoSEO> -->
 <div id="divModuloExtra"><div id="modExtra_detail"><div id="dTopRight"><div class="dCompra"><p align="center"></p></div></div></div></div>
-<input type="hidden" value="<tmpl_var idSeccion>" id="idSccion">
-<input type="hidden" value="<tmpl_var precio>" id="precio">
-<input type="hidden" value="<tmpl_var idArticulo>" id="idArticulo">
-<input type="hidden" value="<tmpl_var estaDisponible>" id="estaDisponible">
-<input type="hidden" value="<tmpl_var urlPage>" id="urlPage">
-<input type="hidden" value="<tmpl_var titulo>" id="titulParaRedSocial">
+<input type="hidden" value="{{ d.Categoria_Seccion }}" id="idSccion">
+<input type="hidden" value="{{ d.PriceAmount }}" id="precio">
+<input type="hidden" value="{{ d.EntityId }}" id="idArticulo">
+<input type="hidden" value="{{ÊgetAvailability(d.ProductAvailability) }}" id="estaDisponible">
+<input type="hidden" value="{{ url }}" id="urlPage">
+<input type="hidden" value="{{ d.Title }}" id="titulParaRedSocial">
 <div id="dRecomendaciones" style="height: 550px;" ><div id="divArticulosRelacionados"><div id="related_detail"><div class="dRecomendTit" ></div></div></div></div>
