--- a/content/templates/macros/comments.html
+++ b/content/templates/macros/comments.html
@@ -54,10 +54,13 @@
 	            	<a href="/{{ getSection(article.Categoria_Seccion)|trim }}#coment" class="vermas">+ comentarios de {{ getSection(article.Categoria_Seccion)|trim }}</a>
 	            {%- endif %}
 	          </div>
-	          {%- if ((loop.index + 1) % cols) == 0 -%}
-		          <div class="solapaCalleSeparador" id="calleSeparadorComents" style="height: 250px;"></div>
-	          {%- endif %}
 	        </div>
+{%- if not (loop.index % cols) == 0 -%} {#- separate cells -#}
+		        <div class="solapaCalleSeparador" id="calleSeparadorComents" style="height: 250px;"></div>
+{%- else %} {#- end row, start new row -#}
+	</div>
+    <div class="solapaModulos">
+{%- endif %}
 		{%- endfor %}
 	</div>
 {%- endmacro %}
