--- a/content/templates/macros/productRelated.html
+++ b/content/templates/macros/productRelated.html
@@ -1,4 +1,4 @@
-{%- macro renderRelated(related_data) -%}
+{%- macro renderRelated(related_data, url) -%}
 	<div class="dRecomendTit">Obras relacionadas</div>
 	{%- for article in related_data -%}
 		<div class="dRecomendMod">
