--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -12,7 +12,7 @@
 	<div class="tmtkMesa-back">
 		<div class="tmtkMesaMenuMod">
 			<div class="tmtkMesaMenuTit"></div>
-            <button onclick="javascript:fillShowCase('Recommended', null)">Recomendados</button>
+            <button onclick="javascript:fillShowCase('Classics', null)">Recomendados</button>
             <button onclick="javascript:fillShowCase('Showcase',null)">Bestsellers</button>
 		</div>
 		<div class="tmtkMesa">
